--- a/Forum/src/app/main/main.component.html
+++ b/Forum/src/app/main/main.component.html
@@ -1,4 +1,5 @@
-<div>
-    <app-teams-list/>
-    <app-posts-list />
+<div class="container">
+  <app-teams-list />
+  <app-posts-list />
 </div>
+ 
