--- a/Forum/src/app/posts-list/posts-list.component.html
+++ b/Forum/src/app/posts-list/posts-list.component.html
@@ -1,7 +1,8 @@
 <aside>
-  <div class="aside">
+  <div *ngIf="isLoading"><app-loader/></div>
+  <div class="aside" *ngIf="!isLoading">
     <h2 class="title">Recent posts</h2>
-    <div>
+    <div >
       <div *ngFor="let post of postsList" class="aside-theme">
         <a href="#">
           <h3>{{ post.themeId.themeName }}</h3>
