--- a/Facecare/src/app/core/header/header.component.html
+++ b/Facecare/src/app/core/header/header.component.html
@@ -1,1 +1,60 @@
-<p>header works!</p>
+<!-- Header -->
+<header class="navbar navbar-expand-lg navbar-end mb-3 bg-white">
+    <div class="container">
+        <div class="navbar-nav-wrap">
+            <div class="navbar-brand-wrapper">
+                <!-- Logo -->
+                <a class="navbar-brand" href="../index.html" aria-label="Unify">
+                    <img class="navbar-brand-logo" src="./assets/logos/logo.svg" alt="Logo" />
+                </a>
+                <!-- End Logo -->
+            </div>
+
+            <!-- Toggle -->
+            <button type="button" class="navbar-toggler ms-auto" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavMenuHeight" aria-label="Toggle navigation" aria-expanded="false"
+                aria-controls="navbarNavMenuHeight">
+                <span class="navbar-toggler-default">
+                    <i class="bi-list"></i>
+                </span>
+                <span class="navbar-toggler-toggled">
+                    <i class="bi-x"></i>
+                </span>
+            </button>
+            <!-- End Toggle -->
+
+            <nav class="navbar-nav-wrap-col collapse navbar-collapse" id="navbarNavMenuHeight">
+                <!-- Navbar -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">My Profile</a>
+                    </li>
+                   
+                    <!-- Log in -->
+                    <li class="nav-item ms-lg-auto">
+                        <a class="btn btn-outline-success me-2 me-lg-0" href="../page-login.html">Log in</a>
+                        <a class="btn btn-dark d-lg-none" href="../page-signup.html">Sign up</a>
+                    </li>
+                    <!-- End Log in -->
+
+                    <!-- Sign up -->
+                    <li class="nav-item">
+                        <a class="btn btn-dark d-none d-lg-inline-block" href="../page-signup.html">Sign up</a>
+                    </li>
+                    <!-- End Sign up -->
+
+                        <!-- Log OUt if logged user -->
+                        <!-- <li class="nav-item">
+                            <a class="btn btn-dark d-none d-lg-inline-block" href="../page-signup.html">Sign up</a>
+                        </li> -->
+                        <!-- Log out -->
+                </ul>
+                <!-- End Navbar -->
+            </nav>
+        </div>
+    </div>
+</header>
+<!-- End Header -->
