add header logo

--- a/Facecare/src/app/core/header/header.component.html
+++ b/Facecare/src/app/core/header/header.component.html
@@ -4,8 +4,8 @@
         <div class="navbar-nav-wrap">
             <div class="navbar-brand-wrapper">
                 <!-- Logo -->
-                <a class="navbar-brand" href="../index.html" aria-label="Unify">
-                    <img class="navbar-brand-logo" src="./assets/logos/logo.svg" alt="Logo" />
+                <a class="navbar-brand" href="/" aria-label="Unify">
+                    <img class="navbar-brand-logo" src="./assets/logos/facecare-logo.png" alt="Logo" />
                 </a>
                 <!-- End Logo -->
             </div>
@@ -25,12 +25,12 @@
 
             <nav class="navbar-nav-wrap-col collapse navbar-collapse" id="navbarNavMenuHeight">
                 <!-- Navbar -->
-                <ul class="navbar-nav">
+                <ul class="navbar-nav nav-pills">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">My Profile</a>
+                        <a class="nav-link" href="#"><i class="bi-person nav-icon"></i>My Profile</a>
                     </li>
                    
                     <!-- Log in -->
