--- a/Forum/src/app/theme/current-theme/current-theme.component.html
+++ b/Forum/src/app/theme/current-theme/current-theme.component.html
@@ -34,7 +34,7 @@
                 <p><span>{{post.likes.length}}</span> likes</p>
             </div>
         </div>
-        <div class="answer-comment">
+        <div class="answer-comment" *ngIf="isLogged">
             <p><span>currentUser</span> comment:</p>
             <div class="answer">
                 <form>
