update readme forum

--- a/Forum/src/app/theme/new-theme/new-theme.component.css
+++ b/Forum/src/app/theme/new-theme/new-theme.component.css
@@ -66,6 +66,7 @@ button+button {
 .new-theme-buttons {
     margin-top: 1em;
     text-align: center;
+    margin-bottom: 5em;
 }
 
 .new-theme-buttons button {
