--- a/Forum/src/app/theme/new-theme/new-theme.component.html
+++ b/Forum/src/app/theme/new-theme/new-theme.component.html
@@ -3,30 +3,36 @@
         <div class="header-background">
             <span>New Theme</span>
         </div>
-        <form method="post" >
+        <form #form="ngForm" (ngSubmit)="newTeamSubmitHandler(form)">
             <div class="new-theme-title">
                 <label for="themeName">Title <span class="red">*</span></label>
-                <input #themeName type="text" name="themeName" id="themeName">
-                <!-- <p class="error">
-                    Theme name is required.
-                </p>
-                <p class="error">
-                    Theme name must be at least 5 characters long.
-                </p> -->
+                <input  type="text" name="themeName" id="themeName" 
+                ngModel
+                #inputThemeName ="ngModel"
+                required
+                minlength="5"
+                >
+            <ng-container *ngIf="inputThemeName.touched">
+                <p class="error" *ngIf="inputThemeName.errors?.['required']">Theme name is required.</p>
+                <p class="error" *ngIf="inputThemeName.errors?.['minlength']">Theme name must be at least 5 characters long.</p>
+            </ng-container>
             </div>
             <div class="new-theme-content">
                 <label for="postText">Post <span class="red">*</span></label>
-                <textarea #postText type="text" name="postText" id="postText" rows="8" class="height"></textarea>
-                <!-- <p class="error">
-                    The field with your post is required.
-                </p>
-                <p class="error">
-                    Post must be at least 10 characters long.
-                </p> -->
+                <textarea type="text" name="postText" id="postText" rows="8" class="height" 
+                ngModel
+                #inputPost="ngModel"
+                required
+                minlength="10"
+                ></textarea>
+            <ng-container *ngIf="inputPost.touched">
+                <p class="error" *ngIf="inputPost.errors?.['required']">The field with your post is required.</p>
+                <p class="error" *ngIf="inputPost.errors?.['minlength']">Post must be at least 10 characters long.</p>
+            </ng-container>
             </div>
             <div class="new-theme-buttons">
                 <button class="cancel">Cancel</button>
-                <button class="public" (click)="postThemeHandler($event,themeName.value,postText.value)">Post</button>
+                <button type="submit"[disabled]="form.invalid" class="public">Post</button>
             </div>
 
         </form>
