--- a/Facecare/src/app/core/header/header.component.html
+++ b/Facecare/src/app/core/header/header.component.html
@@ -46,7 +46,7 @@
                     </li>
                     <!-- End Sign up -->
 
-                        <!-- Log OUt if logged user -->
+                        <!--todo Log OUt if logged user -->
                         <!-- <li class="nav-item">
                             <a class="btn btn-dark d-none d-lg-inline-block" href="../page-signup.html">Sign up</a>
                         </li> -->
