--- a/Facecare/src/app/core/footer/footer.component.html
+++ b/Facecare/src/app/core/footer/footer.component.html
@@ -7,7 +7,7 @@
           <!-- List -->
           <ul class="list-inline list-px-2 mb-0">
             <li class="list-inline-item"><a class="link link-light link-light-75" href="#">Privacy and Policy</a></li>
-            <li class="list-inline-item fs-5 text-white-70 mb-0">© Svetoslav {{currentYear}}</li>
+            <li class="list-inline-item link link-light link-light-75">© Svetoslav {{currentYear}}</li>
           </ul>
           <!-- End List -->
         </div>
@@ -23,7 +23,7 @@
               </li>
               <li class="list-inline-item">
                 <a class="btn btn-icon btn-sm btn-ghost-secondary rounded-circle" href="#">
-                  <i class="bi-linkedin"></i>
+                  <i class="bi-instagram"></i>
                 </a>
               </li>
               <li class="list-inline-item">
