update header html

--- a/Forum/src/app/core/header/header.component.html
+++ b/Forum/src/app/core/header/header.component.html
@@ -14,7 +14,7 @@
       </ul>
       <ul *ngIf="isLoggedIn">
         <li>
-          <a routerLink="/profile">{{firstName}}'s profile</a>
+          <a routerLink="/profile">{{username}}'s profile</a>
         </li>
         <li (click)="logout()">
           <a>logout</a>
