--- a/Forum/src/app/user/register/register.component.html
+++ b/Forum/src/app/user/register/register.component.html
@@ -72,7 +72,7 @@
             >Create Account</button>
             <p class="text-center">
                 Have an account?
-                <a routerLink="/login">Log In</a>
+                <a routerLink="auth/login">Log In</a>
             </p>
 
         </fieldset>
