add and fix fa icons

--- a/Forum/src/app/user/login/login.component.html
+++ b/Forum/src/app/user/login/login.component.html
@@ -6,7 +6,7 @@
             <h2>Login Form</h2>
 
             <p class="field field-icon">
-                <label for="email"><span><i class="fas fa-envelope"></i></span></label>
+                <label for="email"><span><i class="fa fa-envelope"></i></span></label>
                 <input class="input-error" type="email" name="email" id="email" placeholder="john.doe@gmail.com" ngModel
                     required #inputEmail="ngModel" [appEmail]="appEmailDomains">
             </p>
@@ -22,7 +22,7 @@
             {{loginForm?.errors | json}} -->
 
             <p class="field field-icon">
-                <label for="password"><span><i class="fas fa-lock"></i></span></label>
+                <label for="password"><span><i class="fa fa-lock"></i></span></label>
                 <input type="password" name="password" id="password" placeholder="******" ngModel required minlength="5"
                     #inputPassword="ngModel">
             </p>
