--- a/Forum/src/app/theme/current-theme/current-theme.component.html
+++ b/Forum/src/app/theme/current-theme/current-theme.component.html
@@ -29,8 +29,8 @@
                 </div>
             </div>
             <div class="footer">
-                <!-- <i class="fas fa-thumbs-up"></i>
-                <i class="fas fa-thumbs-down"></i> -->
+                <!-- <i class="fa fa-thumbs-up"></i>
+                <i class="fa fa-thumbs-down"></i> -->
                 <p><span>{{post.likes.length}}</span> likes</p>
             </div>
         </div>
