add authenticate component wrapper

--- a/Forum/src/app/authenticate/authenticate.component.html
+++ b/Forum/src/app/authenticate/authenticate.component.html
@@ -1,1 +1,5 @@
-<p>authenticate works!</p>
+<app-loader *ngIf="isAuthenticateing" />
+<!-- wrapper. On refresh keep the logged user -->
+<ng-content *ngIf="!isAuthenticateing">
+
+</ng-content>
