add error service

--- a/Forum/src/app/authenticate/authenticate.component.html
+++ b/Forum/src/app/authenticate/authenticate.component.html
@@ -1,5 +1,3 @@
 <app-loader *ngIf="isAuthenticateing" />
 <!-- wrapper. On refresh keep the logged user -->
-<ng-content *ngIf="!isAuthenticateing">
-
-</ng-content>
+<ng-content *ngIf="!isAuthenticateing"></ng-content>
