--- a/Forum/src/app/teams-list/teams-list.component.html
+++ b/Forum/src/app/teams-list/teams-list.component.html
@@ -9,7 +9,7 @@
         <div class="theme-name">
           <!-- //todo using [] skince router use children -->
           <a [routerLink]="theme._id" class="normal">
-            <h2>{{ theme.themeName }}</h2>
+            <h2>{{ theme.themeName | slice:25}}</h2>
           </a>
           <div class="columns">
             <div>
