add cancel function in profile html

--- a/Forum/src/app/user/profile/profile.component.html
+++ b/Forum/src/app/user/profile/profile.component.html
@@ -65,8 +65,8 @@
                     </div>
                 </div>
                 <!-- actions -->
-                <button class="red-button">Cancel</button>
-                <button class="green-button">Save</button>
+                <button class="red-button" type="button" (click)="handleCancel()">Cancel</button>
+                <button class="green-button" type="submit">Save</button>
             </form>
         </ng-container>
     </div>
