--- a/Facecare/src/app/core/header/header.component.html
+++ b/Facecare/src/app/core/header/header.component.html
@@ -27,7 +27,7 @@
                 <!-- Navbar -->
                 <ul class="navbar-nav nav-pills">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" routerLink="procedures">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi-person nav-icon"></i>My Profile</a>
