--- a/Facecare/src/app/procedures/procedures-board/procedures-board.component.html
+++ b/Facecare/src/app/procedures/procedures-board/procedures-board.component.html
@@ -11,7 +11,7 @@
             <!-- Card -->
             <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
                 <div class="card-transition-zoom-item">
-                    <img class="card-img" src="../assets/img/580x480/img1.jpg" alt="Image Description">
+                    <img class="card-img" src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg" alt="Image Description">
                 </div>
 
                 <div class="card-body">
@@ -32,7 +32,7 @@
             <!-- Card -->
             <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
                 <div class="card-pinned card-transition-zoom-item">
-                    <img class="card-img" src="../assets/img/580x480/img2.jpg" alt="Image Description">
+                    <img class="card-img" src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg" alt="Image Description">
                     <span class="badge bg-dark text-white card-pinned-top-end">Sponsored</span>
                 </div>
 
@@ -54,7 +54,7 @@
             <!-- Card -->
             <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
                 <div class="card-transition-zoom-item">
-                    <img class="card-img" src="../assets/img/580x480/img3.jpg" alt="Image Description">
+                    <img class="card-img" src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg" alt="Image Description">
                 </div>
 
                 <div class="card-body">
