--- a/Facecare/src/app/procedures/procedures-board/procedures-board.component.html
+++ b/Facecare/src/app/procedures/procedures-board/procedures-board.component.html
@@ -5,13 +5,15 @@
         <h2>Our services designed from experienced professionals</h2>
     </div>
     <!-- End Heading -->
-
+    <div *ngIf="isLoading"><app-spinner /></div>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
         <div class="col mb-5 mb-md-0">
             <!-- Card -->
             <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
                 <div class="card-transition-zoom-item">
-                    <img class="card-img" src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg" alt="Image Description">
+                    <img class="card-img"
+                        src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg"
+                        alt="Image Description">
                 </div>
 
                 <div class="card-body">
@@ -32,7 +34,9 @@
             <!-- Card -->
             <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
                 <div class="card-pinned card-transition-zoom-item">
-                    <img class="card-img" src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg" alt="Image Description">
+                    <img class="card-img"
+                        src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg"
+                        alt="Image Description">
                     <span class="badge bg-dark text-white card-pinned-top-end">Sponsored</span>
                 </div>
 
@@ -54,7 +58,9 @@
             <!-- Card -->
             <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
                 <div class="card-transition-zoom-item">
-                    <img class="card-img" src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg" alt="Image Description">
+                    <img class="card-img"
+                        src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg"
+                        alt="Image Description">
                 </div>
 
                 <div class="card-body">
