add dynamic card content in procedures-board.component

--- a/Facecare/src/app/procedures/procedures-board/procedures-board.component.html
+++ b/Facecare/src/app/procedures/procedures-board/procedures-board.component.html
@@ -1,76 +1,27 @@
 <!-- Card Grid -->
-<div class="container content-space-1">
+<div *ngIf="isLoading"><app-spinner /></div>
+<div *ngIf="!isLoading" class="container content-space-1">
     <!-- Heading -->
     <div class="w-lg-65 text-center mx-lg-auto mb-5 mb-sm-7 mb-lg-10">
         <h2>Our services designed from experienced professionals</h2>
     </div>
     <!-- End Heading -->
-    <div *ngIf="isLoading"><app-spinner /></div>
+
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-        <div class="col mb-5 mb-md-0">
+        <div class="col mb-5 mb-md-0" *ngFor="let card of proceduresList">
             <!-- Card -->
-            <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
+            <a class="card card-ghost card-transition-zoom h-100" [routerLink]="card._id">
                 <div class="card-transition-zoom-item">
-                    <img class="card-img"
-                        src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg"
-                        alt="Image Description">
+                    <img class="card-img" src={{card.img}} alt="{{card.label}}">
                 </div>
 
                 <div class="card-body">
-                    <h4>Virtual Venue</h4>
-                    <p class="card-text">Create an immersive attendee experience with interactive programming for both
-                        digital and onsite audiences</p>
+                    <h4>{{card.label}}</h4>
+                    <p class="card-text">{{card.description}}</p>
                 </div>
 
                 <div class="card-footer">
-                    <span class="card-link">Explore Virtual Venue</span>
-                </div>
-            </a>
-            <!-- End Card -->
-        </div>
-        <!-- End Col -->
-
-        <div class="col mb-5 mb-md-0">
-            <!-- Card -->
-            <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
-                <div class="card-pinned card-transition-zoom-item">
-                    <img class="card-img"
-                        src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg"
-                        alt="Image Description">
-                    <span class="badge bg-dark text-white card-pinned-top-end">Sponsored</span>
-                </div>
-
-                <div class="card-body">
-                    <h4>Studio by Htmlstream</h4>
-                    <p class="card-text">Produce professional, reliable streams easily leveraging Htmlstream's
-                        innovative broadcast studio</p>
-                </div>
-
-                <div class="card-footer">
-                    <span class="card-link">Explore Studio</span>
-                </div>
-            </a>
-            <!-- End Card -->
-        </div>
-        <!-- End Col -->
-
-        <div class="col">
-            <!-- Card -->
-            <a class="card card-ghost card-transition-zoom h-100" href="../blog-article.html">
-                <div class="card-transition-zoom-item">
-                    <img class="card-img"
-                        src="https://poppcosmeticsurgery.com/wp-content/uploads/2021/12/Cosmetic-Surgery.jpg"
-                        alt="Image Description">
-                </div>
-
-                <div class="card-body">
-                    <h4>Onsite</h4>
-                    <p class="card-text">Optimize your in-person experience with best-in-class capabilities like badge
-                        printing and lead retrieval</p>
-                </div>
-
-                <div class="card-footer">
-                    <span class="card-link">Explore Onsite</span>
+                    <span class="card-link">Explore {{card.label}}</span>
                 </div>
             </a>
             <!-- End Card -->
