--- a/Facecare/src/app/procedures/procedures-board/procedures-board.component.html
+++ b/Facecare/src/app/procedures/procedures-board/procedures-board.component.html
@@ -17,7 +17,7 @@
 
                 <div class="card-body">
                     <h4>{{card.label}}</h4>
-                    <p class="card-text">{{card.description}}</p>
+                    <p class="card-text">{{card.description | slice:20}}</p>
                 </div>
 
                 <div class="card-footer">
