add procedure-details html and css

--- a/Facecare/src/app/procedures/procedure-details/procedure-details.component.html
+++ b/Facecare/src/app/procedures/procedure-details/procedure-details.component.html
@@ -1,1 +1,42 @@
-<p>procedure-details works!</p>
+<!-- Details -->
+<div class="bg-soft-dark-to-start-75 overflow-hidden">
+    <div class="container content-space-2">
+      <div class="row justify-content-lg-between align-items-md-center">
+        <div class="col-md-6 col-lg-5 mb-10 mb-lg-0">
+          <div class="position-relative">
+            <img class="img-fluid" src="../assets/img/500x650/img4.jpg" alt="Image Description">
+  
+            <!-- SVG Shape -->
+            <figure class="position-absolute bottom-0 start-0 zi-n1 mb-n7 ms-n7" style="width: 10rem;">
+              <img class="img-fluid" src="../assets/svg/components/dots.svg" alt="Image Description">
+            </figure>
+            <!-- End SVG Shape -->
+          </div>
+        </div>
+        <!-- End Col -->
+  
+        <div class="col-md-6">
+          <!-- Blockquote -->
+          <figure class="blockquote-lg mb-7">
+            <span class="text-cap text-muted">Featured client</span>
+  
+            <blockquote class="blockquote"><em>To say that switching to Unify has been life-changing is an understatement. My business has tripled and I got my life back.</em></blockquote>
+  
+            <figcaption class="blockquote-footer">
+              Nicole Grazioso
+              <span class="blockquote-footer-source">Director Payments & Risk | Airbnb</span>
+            </figcaption>
+          </figure>
+          <!-- End Blockquote -->
+  
+          <a class="btn btn-dark" href="#">Add</a> &nbsp;
+          <a class="btn btn-dark" href="#">Cancel</a>
+
+          
+        </div>
+        <!-- End Col -->
+      </div>
+      <!-- End Row -->
+    </div>
+  </div>
+  <!-- End Details -->
