--- a/Facecare/src/app/shared/spinner/spinner.component.html
+++ b/Facecare/src/app/shared/spinner/spinner.component.html
@@ -1,1 +1,11 @@
-<p>spinner works!</p>
+<div id="spinner-wrapper">
+    <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div> &nbsp;&nbsp;
+    <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>&nbsp;&nbsp;
+    <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>&nbsp;&nbsp;
+</div>
