--- a/Facecare/src/app/core/header/header.component.html
+++ b/Facecare/src/app/core/header/header.component.html
@@ -32,6 +32,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi-person nav-icon"></i>My Profile</a>
                     </li>
+                    <!-- show add only if admin -->
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="procedures">Add</a>
+                    </li>
                    
                     <!-- Log in -->
                     <li class="nav-item ms-lg-auto">
@@ -48,7 +52,7 @@
 
                         <!--todo Log OUt if logged user -->
                         <!-- <li class="nav-item">
-                            <a class="btn btn-dark d-none d-lg-inline-block" href="../page-signup.html">Sign up</a>
+                            <a class="btn btn-dark d-none d-lg-inline-block" href="../page-signup.html">Log out</a>
                         </li> -->
                         <!-- Log out -->
                 </ul>
