add routerLink for Add in header html

--- a/Facecare/src/app/core/header/header.component.html
+++ b/Facecare/src/app/core/header/header.component.html
@@ -34,7 +34,7 @@
                     </li>
                     <!-- show add only if admin -->
                     <li class="nav-item">
-                        <a class="nav-link" routerLink="procedures">Add</a>
+                        <a class="nav-link" routerLink="procedures/add">Add</a>
                     </li>
                    
                     <!-- Log in -->
