--- a/Forum/src/app/theme/new-theme/new-theme.component.html
+++ b/Forum/src/app/theme/new-theme/new-theme.component.html
@@ -6,33 +6,33 @@
         <form #form="ngForm" (ngSubmit)="newTeamSubmitHandler(form)">
             <div class="new-theme-title">
                 <label for="themeName">Title <span class="red">*</span></label>
-                <input  type="text" name="themeName" id="themeName" 
-                ngModel
-                #inputThemeName ="ngModel"
+                <input type="text" name="themeName" id="themeName" 
+                ngModel 
+                #inputThemeName="ngModel" 
                 required
-                minlength="5"
-                >
-            <ng-container *ngIf="inputThemeName.touched">
-                <p class="error" *ngIf="inputThemeName.errors?.['required']">Theme name is required.</p>
-                <p class="error" *ngIf="inputThemeName.errors?.['minlength']">Theme name must be at least 5 characters long.</p>
-            </ng-container>
+                minlength="5">
+                <ng-container *ngIf="inputThemeName.touched">
+                    <p class="error" *ngIf="inputThemeName.errors?.['required']">Theme name is required.</p>
+                    <p class="error" *ngIf="inputThemeName.errors?.['minlength']">Theme name must be at least 5
+                        characters long.</p>
+                </ng-container>
             </div>
             <div class="new-theme-content">
                 <label for="postText">Post <span class="red">*</span></label>
                 <textarea type="text" name="postText" id="postText" rows="8" class="height" 
-                ngModel
+                ngModel 
                 #inputPost="ngModel"
-                required
-                minlength="10"
-                ></textarea>
-            <ng-container *ngIf="inputPost.touched">
-                <p class="error" *ngIf="inputPost.errors?.['required']">The field with your post is required.</p>
-                <p class="error" *ngIf="inputPost.errors?.['minlength']">Post must be at least 10 characters long.</p>
-            </ng-container>
+                required 
+                minlength="10"></textarea>
+                <ng-container *ngIf="inputPost.touched">
+                    <p class="error" *ngIf="inputPost.errors?.['required']">The field with your post is required.</p>
+                    <p class="error" *ngIf="inputPost.errors?.['minlength']">Post must be at least 10 characters long.
+                    </p>
+                </ng-container>
             </div>
             <div class="new-theme-buttons">
                 <button class="cancel">Cancel</button>
-                <button type="submit"[disabled]="form.invalid" class="public">Post</button>
+                <button type="submit" [disabled]="form.invalid" class="public">Post</button>
             </div>
 
         </form>
