add edit, del links in details

--- a/Facecare/src/app/procedures/procedure-details/procedure-details.component.html
+++ b/Facecare/src/app/procedures/procedure-details/procedure-details.component.html
@@ -27,13 +27,20 @@
           <!-- should add procedure to user ref in the back end -->
           <a class="btn btn-dark" href="#">Add</a> &nbsp;
           <a class="btn btn-dark" routerLink="/procedures">Cancel</a>
-
-
+        
         </div>
         <!-- End Col -->
+        
       </div>
       <!-- End Row -->
+      <!-- todo if owner or admin -->
+      <ng-container>
+        <a class="btn" href="#"><i class="bi bi-plus-square-fill" style="font-size: 2rem; color: #077C76" ></i></a>
+        <a class="btn" href="#"><i class="bi bi-trash3" style="font-size: 2rem; color: red;"></i></a>
+      </ng-container>
     </div>
+
   </div>
+
 </div>
 <!-- End Details -->
