--- a/Facecare/src/app/procedures/procedures-board/procedures-board.component.html
+++ b/Facecare/src/app/procedures/procedures-board/procedures-board.component.html
@@ -12,7 +12,7 @@
             <!-- Card -->
             <a class="card card-ghost card-transition-zoom h-100" [routerLink]="card._id">
                 <div class="card-transition-zoom-item">
-                    <img class="card-img" src={{card.img}} alt="{{card.label}}">
+                    <img class="card-img" src={{card.img}} alt={{card.label}}>
                 </div>
 
                 <div class="card-body">
