--- a/Facecare/src/app/procedures/procedure-details/procedure-details.component.html
+++ b/Facecare/src/app/procedures/procedure-details/procedure-details.component.html
@@ -36,7 +36,7 @@
       <!-- todo if owner or admin -->
       <ng-container>
         <a class="btn" href="#"><i class="bi bi-plus-square-fill" style="font-size: 2rem; color: #077C76" ></i></a>
-        <a class="btn" href="#"><i class="bi bi-trash3" style="font-size: 2rem; color: red;"></i></a>
+        <a class="btn" (click)="del()"><i class="bi bi-trash3" style="font-size: 2rem; color: red;"></i></a>
       </ng-container>
     </div>
 
