--- a/Facecare/src/app/core/header/header.component.html
+++ b/Facecare/src/app/core/header/header.component.html
@@ -46,7 +46,7 @@
 
                     <!-- Sign up -->
                     <li class="nav-item">
-                        <a class="btn btn-dark d-none d-lg-inline-block" href="../page-signup.html">Sign up</a>
+                        <a class="btn btn-dark d-none d-lg-inline-block" routerLink="/user/register">Sign up</a>
                     </li>
                     <!-- End Sign up -->
 
