--- a/Facecare/src/app/user/register/register.component.html
+++ b/Facecare/src/app/user/register/register.component.html
@@ -1,1 +1,217 @@
-<p>register works!</p>
+<!-- Content -->
+<div class="container content-space-1">
+    <div class="mx-lg-auto" style="max-width: 55rem;">
+        <div class="position-relative">
+            <!-- Card -->
+            <div class="card card-shadow card-login">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <!-- Form -->
+                            <form #form="ngForm" (ngSubmit)="registerSubmitHandler(form)">
+                                <div class="text-center">
+                                    <div class="mb-5">
+                                        <h3 class="card-title">Create your account</h3>
+                                    </div>
+                                </div>
+
+                                <label class="form-label" for="fullNameSrEmail">Full name</label>
+                                <!-- Form -->
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <!-- Form -->
+                                        <div class="mb-4">
+                                            <input type="text" class="form-control form-control-lg" name="firstName"
+                                                id="fullNameSrEmail" placeholder="Mark" aria-label="Mark" ngModel
+                                                #inputfirstName="ngModel" required minlength="3">
+
+                                        </div>
+                                        <ng-container *ngIf="inputfirstName.touched">
+                                            <p class="alert alert-warning" *ngIf="inputfirstName.errors?.['required']">
+                                                Name is required.</p>
+                                            <p class="alert alert-success" *ngIf="inputfirstName.errors?.['minlength']">
+                                                Name must be at least 3
+                                                chars.</p>
+                                        </ng-container>
+                                        <!-- End Form -->
+                                    </div>
+
+                                    <div class="col-sm-6">
+                                        <!-- Form -->
+                                        <div class="mb-4">
+                                            <input type="text" class="form-control form-control-lg" name="lastName"
+                                                placeholder="Williams" aria-label="Williams" ngModel
+                                                #inputlastName="ngModel" required minlength="2">
+                                        </div>
+                                        <ng-container *ngIf="inputlastName.touched">
+                                            <p class="alert alert-warning" *ngIf="inputlastName.errors?.['required']">
+                                                Name is required.</p>
+                                            <p class="alert alert-success" *ngIf="inputlastName.errors?.['minlength']">
+                                                Name must be at least 2
+                                                chars.</p>
+                                        </ng-container>
+                                        <!-- End Form -->
+                                    </div>
+                                </div>
+                                <!-- End Form -->
+                                <label class="form-label" for="details">Details</label>
+                                <!-- Form -->
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <!-- Form -->
+                                        <div class="mb-4">
+                                            <input type="number" class="form-control form-control-lg" name="age"
+                                                id="details" placeholder="Age" aria-label="Age" ngModel
+                                                #inputAge="ngModel" required min="11">
+
+                                        </div>
+                                        <ng-container *ngIf="inputAge.touched">
+                                            <p class="alert alert-warning" *ngIf="inputAge.errors?.['required']">
+                                                Age is required.</p>
+                                            <p class="alert alert-success" *ngIf="inputAge.errors?.['min']">
+                                              Sould be more than 11.</p>
+                                        </ng-container>
+                                        <!-- End Form -->
+                                    </div>
+
+                                    <div class="col-sm-6">
+                                        <!-- Form -->
+                                        <div class="mb-4">
+                                            <input type="text" class="form-control form-control-lg" name="tel"
+                                                placeholder="Mobile" aria-label="tel" ngModel
+                                                #inputMobile="ngModel"
+                                                 required 
+                                                 pattern="^[0-9]{10}$">
+                                        </div>
+                                        <ng-container *ngIf="inputMobile.touched">
+                                            <p class="alert alert-warning" *ngIf="inputMobile.errors?.['required']">
+                                                Mobile is required.</p>
+                                            <p class="alert alert-success" *ngIf="inputMobile.errors?.['pattern']">
+                                                Mobile is not Valid!</p>
+                                        </ng-container>
+                                        <!-- End Form -->
+                                    </div>
+                                </div>
+                                <!-- End Form -->
+                                <!-- Form -->
+                                <div class="mb-4">
+                                    <label class="form-label" for="signupSrEmail">Your email</label>
+                                    <input type="email" class="form-control form-control-lg" name="email"
+                                        id="signupSrEmail" placeholder="Markwilliams@site.com"
+                                        aria-label="Markwilliams@site.com" ngModel #inputEmail="ngModel" required
+                                        email="email">
+
+                                </div>
+                                <ng-container *ngIf="inputEmail.touched">
+                                    <p class="alert alert-warning" *ngIf="inputEmail.errors?.['required']">
+                                        Email is required.</p>
+                                    <p class="alert alert-success" *ngIf="inputEmail.errors?.['email']">
+                                        The email is not valid.</p>
+
+                                </ng-container>
+                                <!-- End Form -->
+
+                                <!-- Form -->
+                                <div class="mb-4">
+                                    <label class="form-label" for="signupSrPassword">Password</label>
+
+                                    <input type="password" class="js-toggle-password form-control form-control-lg"
+                                        name="password" id="signupSrPassword" placeholder="8+ characters required"
+                                        aria-label="8+ characters required" 
+                                        ngModel 
+                                        #inputPassword="ngModel"
+                                        [(ngModel)]="passwordModel"
+                                        required
+                                        minlength="8">
+
+                                </div>
+                                <ng-container *ngIf="inputPassword.touched">
+                                    <p class="alert alert-warning" *ngIf="inputPassword.errors?.['required']">
+                                        Password is required.</p>
+                                    <p class="alert alert-success" *ngIf="inputPassword.errors?.['minlength']">
+                                        Name must be at least 8 chars.</p>
+
+                                </ng-container>
+                                <!-- End Form -->
+
+                                <!-- Form -->
+                                <div class="mb-4">
+                                    <label class="form-label" for="signupSrConfirmPassword">Confirm password</label>
+
+
+                                    <input type="password" class="js-toggle-password form-control form-control-lg"
+                                        name="confirmPassword" id="signupSrConfirmPassword"
+                                        placeholder="8+ characters required" aria-label="8+ characters required"
+                                        required minlength="8" 
+                                        ngModel 
+                                        #inputConfirmPassword="ngModel"
+                                        [(ngModel)]="confirmPasswordModel" 
+                                        required
+                                        minlength="8">
+
+                                </div>
+                                <ng-container *ngIf="inputConfirmPassword.touched">
+                                    <p class="alert alert-warning" *ngIf="inputConfirmPassword.errors?.['required']">
+                                        Password is required.</p>
+                                    <p class="alert alert-success" *ngIf="inputConfirmPassword.errors?.['minlength']">
+                                        Name must be at least 8 chars.</p>
+                                        <p class="alert alert-success" *ngIf="misMatch">
+                                    {{misMatch}}</p>
+                                </ng-container>
+                                <!-- End Form -->
+
+                                <!-- Term and Conditions Form Check -->
+
+                                <!-- <div class="form-check mb-4">
+                                    <input class="form-check-input" type="checkbox" value="" id="termsCheckbox"
+                                        required>
+                                    <label class="form-check-label" for="termsCheckbox">I accept the <a href="#">Terms
+                                            and Conditions</a></label>
+                                    <span class="invalid-feedback">Please accept our Terms and Conditions.</span>
+                                </div> -->
+
+                                <!-- End Term and Conditions Form Check -->
+
+                                <div class="d-grid gap-4">
+                                    <button type="submit" class="btn btn-success btn-lg" [disabled]="form.invalid">Create an account</button>
+                                    <p class="card-text text-muted">Remember your password? <a class="link link-success"
+                                            routerLink="/user/login">Log in</a></p>
+                                </div>
+                            </form>
+                            <!-- End Form -->
+                        </div>
+                    </div>
+                    <!-- End Col -->
+
+                    <div class="col-md-4 d-md-flex justify-content-center flex-column bg-soft-primary p-8 p-md-5"
+                        style="background-image: url(../assets/svg/components/wave-pattern.svg);">
+                        <h5 class="mb-4">Follow your progress with Facecare:</h5>
+
+                        <!-- List Checked -->
+                        <ul class="list-checked list-checked-primary list-py-2">
+                            <li class="list-checked-item">The real nature of anti-aging prevention</li>
+                            <li class="list-checked-item">Easily add & manage your procedures</li>
+                        </ul>
+                        <!-- End List Checked -->
+                    </div>
+                    <!-- End Col -->
+                </div>
+                <!-- End Row -->
+            </div>
+            <!-- End Card -->
+
+            <!-- SVG Shape -->
+            <figure class="position-absolute top-0 end-0 zi-n1 d-none d-sm-block mt-n7 me-n10" style="width: 4rem;">
+                <img class="img-fluid" src="./assets/svg/components/pointer-up.svg" alt="Image Description">
+            </figure>
+            <!-- End SVG Shape -->
+
+            <!-- SVG Shape -->
+            <figure class="position-absolute bottom-0 start-0 d-none d-sm-block ms-n10 mb-n10" style="width: 15rem;">
+                <img class="img-fluid" src="../assets/svg/components/curved-shape.svg" alt="Image Description">
+            </figure>
+            <!-- End SVG Shape -->
+        </div>
+    </div>
+</div>
+<!-- End Content -->
